# CDM

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  Dockerfile  Mondrift_Shiny_app.R  README.md  report.Rmd  vcpkg-configuration.json  vcpkg.json
.github/workflows/: actions.yml  hosted-build-ZG.yml  hosted-build.yml  pages.yml  update-dependency-graph.yml
Casanova/: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE
Casanova/R/: 1_psd_function.R  1_psd_stats.R  2_wet_bulb_function.R  3_wvprofile_params.R  4_Droplet_Transport_function.R  4_Nozzle_Characteristics.R  5_Deposition_Calcs_function.R  Scenario 1 report.html  check_units.R  create_paramsData.R  create_paramsWT.R  create_params_ui.R  inputs_from_csv.R  params_english.R  params_metric.R  params_units.R  plot_droplet_data.R  psipsipsi_calcs.R  report.Rmd  runCasanova.R  runCasanovaApp.R  write_report.R
Casanova/Shiny/: CDM_user_guide.Rmd  app.R
Casanova/Shiny/default/: Default_values_units.csv
Casanova/Shiny/default/testing/: Params_Germany.csv  Params_Spain.csv  Params_USA.csv
Casanova/data/: params.RData  params_english.RData  params_metric.RData
Casanova/data-raw/: 2019 Sep 24 Bayer.xlsx  DATASET.R
Casanova/inst/shiny-examples/CasanovaApp/: app.R
Casanova/man/: WV2m.Rd  charact_cal.Rd  deposition_calcs.Rd  droplet_transport.Rd  inputs_from_csv.Rd  plot_droplet_data.Rd  psd.Rd  psd_stats.Rd  psipsipsi_calcs.Rd  runCasanova.Rd  runCasanovaApp.Rd  wet_bulb.Rd  write_report.Rd  wvprofile.Rd  wvprofilem.Rd
Casanova/sample_data/: DSD.csv  Nozzle_Params.csv  Params (English).csv  Params (Metric).csv  Params.csv  Scenarios.csv  Wind_Temperature (English).csv  Wind_Temperature (Metric).csv
Casanova/sample_data/Test with Initial MathCad Data/: Details.txt  Params (English).csv  Scenario 1 report.html
Casanova/sample_data/reports/: Scenario 1 report.html  Scenario 2 report.html  Scenario 3 report.html
Casanova/testing folder/Comparions of results with previous and current code/: Casanova Drift report (new code).html  Environment with results.RData
Casanova/testing folder/Comparions of results with previous and current code/New Code Input Files/: Params (English).csv  Scenarios.csv
Casanova/testing folder/Comparions of results with previous and current code/Old Code Input Files/: Inputs3.R
Casanova/testing folder/Droplet_transport_parallel/: Drift Results.pptx
Casanova/testing folder/Droplet_transport_parallel/Inputs Files/: DSD.csv  (+2 more)
Casanova/testing folder/Numerical vs. Analytical DSD Derivative/: Scenario 1 report - Copy.html  Scenario 1 report.html
Casanova/testing folder/Test DSD Statistics/: DDD_Params.csv  DSD_Summary_Statistics_RevACC.xlsx  DSD_stats.csv  Params (English).csv  Readme.txt  Scenario 1 report.html  Scenarios.csv
Casanova/testing folder/Test with Initial MathCad Data/: 4_Nozzle_Characteristics.R  5_Deposition_Calcs_function.R  Curve_Fit_Initial_Values.csv  DSD.csv  Scenarios.csv
Casanova/tests/: testthat.R
Casanova/tests/testthat/: test-TestPSD.R
Casanova/vignettes/: DSD_ Xtendimax _ AI11004 .csv  DefaultInputs.R  Examples_Naresh.Rmd  Examples_Naresh_runAll.Rmd  Introduction.Rmd  ReadinDraw.Rmd  dev.Rmd
Casanova/vignettes/ZG/: Laplace.Rmd
Casanova/vignettes/runBatch/: DefaultInputs.R  Parameterized_Naresh.Rmd  run_MultipleReport.R
CasanovaCpp/: CMakeLists.txt
CasanovaCpp/src/: Deposition.cpp  Deposition.hpp  DropletSizeModel.cpp  DropletSizeModel.hpp  DropletTransport.cpp  DropletTransport.hpp  InputParameters.hpp  Interpolate1D.hpp  NozzleVelocity.cpp  NozzleVelocity.hpp  Serialization.cpp  Serialization.hpp  WVProfile.cpp  WVProfile.hpp  WetBulbTemperature.cpp  WetBulbTemperature.hpp  main.cpp
CasanovaCpp/src/gui/: PlotWindow.cpp  PlotWindow.hpp
DriftDeepeR/: .Rbuildignore  DESCRIPTION
DriftDeepeR/R/: 1_psd_function.R  2_wet_bulb_function.R
DriftDeepeR/vignettes/: Introduction.Rmd  dev.Rmd
R/cdm/: DESCRIPTION  NAMESPACE  README  configure
R/cdm/R/: cdm.R  zzz.R
R/cdm/demo/: 00Index  case1.R  caseB.R  caseG.R  caseI.R
R/cdm/man/: cdm-package.Rd
R/cdm/src/: CDM.c  Makevars  Makevars.in  Makevars.win  cdm.c
Rscripts/: 1_psd_function.R  1a_psd_function.R  1b_psd_function.R  2_wet_bulb_function.R  3_WV2measurements.R  3_wvprofile_params.R  4_Droplet_Transport_function.R  5_Deposition_Calcs_function.R  Inputs.R  Main Driver.R  debounce_sc.R
Rscripts/Unaltered/: 2_wet_bulb_function.R  3_WV2measurements.R  4_Droplet_Transport_function.R  4_Nozzle_Characteristics.R  5_Deposition_Calcs_function.R  Main Driver.R
Rscripts/delete/: 1_psd_function.R  1a_psd_function.R  1b_psd_function.R  3_WV2measurements.R  3_wvprofile_params.R  4_Droplet_Transport_function.R  5_Deposition_Calcs_function.R  Main Driver.R
ShinyApp/: Mondrift_Shiny_app.R
ShinyApp/Rscripts/: 4_Droplet_Transport_function.R
ShinyApp/Rscripts-deprecated/: 4_Droplet_Transport_function.R  4_Nozzle_Characteristics.R  5_Deposition_Calcs_function.R  Inputs.R  Inputs2.R
Templates/: DSD_template.csv  DSD_template.xlsx
cmake/: cdm-config.cmake.in  cdm.pc.in
docs/: DesignSpecification.md  FunctionalSpecification.md  README.md  URS.md  VerticalDriftDistribution_Abstract.md  _config.yml  api-reference.md  design-spec.md  functional-spec.md  getting-started.md  index.md  research.md  user-requirements.md
docs/_layouts/: default.html
docs/assets/css/: style.css
include/cdm/: CDM.h
ports/blaze/: portfile.cmake  vcpkg.json
ports/ceres/: portfile.cmake
ports/sundials/: portfile.cmake
src/: AtmosphericProperties.cpp  AtmosphericProperties.hpp  CDM.cpp  CDMCLI.cpp  CVodeError.hpp  CVodeIntegrator.hpp  Constants.hpp  Deposition.cpp  Deposition.hpp  DropletSizeModel.cpp  DropletSizeModel.hpp  DropletTransport.cpp  DropletTransport.hpp  InputParameters.hpp  Interpolate1D.hpp  Model.hpp  NozzleVelocity.cpp  NozzleVelocity.hpp  Serialization.cpp  Serialization.hpp  WVProfile.cpp  WVProfile.hpp  WetBulbTemperature.cpp  WindVelocityProfile.cpp  WindVelocityProfile.hpp  main.cpp
src/gui/: SegoeUI.hpp
tests/: Case_B.json  Case_G.json
(+16 files in other folders)
